--- a/histo.html
+++ b/histo.html
@@ -48,7 +48,7 @@
     <!-- SESSÃO DE BOTÕES -->
     <div class="centralizar">
     <div class="botoes">
-        <a href="main.html">Página Inicial</a>
+        <a href="index.html">Página Inicial</a>
         <a href="">Próximo</a>
     </div>
     </div>
