--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="conteudo">
         <h2>APRESENTAÇÃO</h2>
     <br><br><br>
-        <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
-            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
-            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
-            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
-            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
-            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
-            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!<br>
+        <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
+            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
+            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
+            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
+            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
+            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
+            olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!
             olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!</p>
     <br><br><br>
     
@@ -34,37 +34,37 @@
         <p>Acesse nossas histórias através dos cards a seguir.</p>
         <div class="cards">
             <a href="histo.html"><div class="card" id="hist1">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <h4>CONFIRA A ÚLTIMA HISTÓRIA!</h4>
                 <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui!</p>
             </div></a>
 
             <a href="histo.html"><div class="card" id="hist2">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <h4>Título 2</h4>
                 <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui</p>
             </div></a>
 
             <a href="histo.html"><div class="card" id="hist3">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <h4>Título 3</h4>
                 <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui</p>
             </div></a>
 
             <a href="histo.html"><div class="card" id="hist4">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <h4>Título 3</h4>
                 <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui</p>
             </div></a>
 
             <a href="histo.html"><div class="card" id="hist5">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <h4>Título 3</h4>
                 <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui</p>
             </div></a>
 
             <a href="histo.html"><div class="card" id="hist6">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <h4>Título 3</h4>
                 <p>olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui! olá pessoas. hoje nos vamos ficar por aquiolá pessoas. hoje nos vamos ficar por aqui</p>
             </div></a>
@@ -78,12 +78,12 @@
     <div class="sobre-mim">
         <div class="sobre">
             <div class="bloco-sobre">
-                <img src="imagens/IMG_0011_07745.JPG">
+                <img src="IMG_0011_07745.JPG">
                 <p> Sou técnica em desenvolvimento de sistemas, amante de literatura policial e suspense e também fã obcecada por One Direction. Gosto muito de lugares que mantenham contato com a natureza. Quanto ao meu paladar, capuccino é a bebida que vivo viciada e a pizza da minha mãe conquista o meu coração.</p>
             </div>
             <br>
             <div class="bloco-sobre">
-                <img src="imagens/casafundo.png">
+                <img src="casafundo.png">
                 <p> NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject. </p>
             </div>
         </div>
@@ -122,8 +122,8 @@
     <footer>
         <p>Siga-nos nas redes sociais!</p>
         <div class="social">
-            <a href="https://www.instagram.com/karolyne_1511/"><img src="/imagens/Instagram_logo.png"></a>
-            <a href="https://www.facebook.com/julynefalcao"><img src="/imagens/face-removebg-preview (1).png"></a>
+            <a href="https://www.instagram.com/karolyne_1511/"><img src="Instagram_logo.png"></a>
+            <a href="https://www.facebook.com/julynefalcao"><img src="face-removebg-preview (1).png"></a>
         </div>
         <br><br>
         <p> © Todos os Direitos Reservados</p>
