--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
         <div class="sobre">
             <div class="bloco-sobre">
                 <img src="IMG_0011_07745.JPG">
+                <h4>Júlia Karolyne</h4>
                 <p> Sou técnica em desenvolvimento de sistemas, amante de literatura policial e suspense e também fã obcecada por One Direction. Gosto muito de lugares que mantenham contato com a natureza. Quanto ao meu paladar, capuccino é a bebida que vivo viciada e a pizza da minha mãe conquista o meu coração.</p>
             </div>
             <br>
             <div class="bloco-sobre">
                 <img src="casafundo.png">
+                <h4>Nome</h4>
                 <p> NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject NewProject. </p>
             </div>
         </div>
