--- a/histo.html
+++ b/histo.html
@@ -18,31 +18,54 @@
 
     <!-- SESSÃO DE CONTEÚDO -->
     <div class="conteudo">
-        <h2>TÍTULO DA HISTÓRIA</h2>
+        <h2>A BUTIJA DE SEU ZÉ DAS CABRAS</h2>
         <br><br>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed fermentum nibh. Nullam rutrum massa odio, ac iaculis felis ultricies vitae. Nam ac erat orci. Sed pulvinar mollis nisl, et tempor tortor maximus non. Aliquam ac leo vulputate, euismod ex quis, euismod ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus, leo eu tempus finibus, augue erat tempor elit, ac rutrum risus tellus non diam. Proin fringilla turpis vel lobortis consectetur. Morbi vitae massa vel velit euismod dignissim placerat in nulla. Aenean sollicitudin orci non mi tincidunt, quis sagittis nunc aliquam. Ut enim elit, congue nec feugiat nec, vehicula ut felis. Integer pharetra molestie metus, eu finibus elit gravida eu. Nunc ultricies placerat dolor, vel pulvinar purus efficitur eget. Quisque ut pellentesque sem. Proin et scelerisque dui. Proin diam mi, rhoncus id vehicula eu, aliquam nec felis.
+            O céu estava salpicado de estrelas e era noite de lua cheia, que dava para ver o chão apenas com a claridade refletida pelo satélite natural. Debaixo do pé de acerola, sentados em bancos, formavam um círculo desajeitado a mulher idosa, suas filhas e seus netos. Lá conversavam e trocavam histórias, fossem do dia a dia, fossem de um passado distante. Era impressionante como não faltava assunto e como uma coisa puxava à outra.
         </p>
-        <br>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed fermentum nibh. Nullam rutrum massa odio, ac iaculis felis ultricies vitae. Nam ac erat orci. Sed pulvinar mollis nisl, et tempor tortor maximus non. Aliquam ac leo vulputate, euismod ex quis, euismod ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus, leo eu tempus finibus, augue erat tempor elit, ac rutrum risus tellus non diam. Proin fringilla turpis vel lobortis consectetur. Morbi vitae massa vel velit euismod dignissim placerat in nulla. Aenean sollicitudin orci non mi tincidunt, quis sagittis nunc aliquam. Ut enim elit, congue nec feugiat nec, vehicula ut felis. Integer pharetra molestie metus, eu finibus elit gravida eu. Nunc ultricies placerat dolor, vel pulvinar purus efficitur eget. Quisque ut pellentesque sem. Proin et scelerisque dui. Proin diam mi, rhoncus id vehicula eu, aliquam nec felis.
+            — Noite de lua fina tá hoje. — Carmen, filha mais velha de Ana, a mulher idosa, diz.<br>
+            — Essa noite me lembrou de uma vez que seu Zé das Cabras sonhou com butija, dizia ele…<br>
+            — O que é butija, vovó Ana? — Nicolas indagou à sua avó.<br>
+            — É como se fosse uma panela de barro, meu fi.<br>
+            — Ahhh! — Ele exclama em compreensão.<br>
+            — E por que ele sonhou com isso? — O irmão mais novo de Nicolas, Nivaldo, agora é quem questiona ainda mais curioso.<br>
+            — Vocês já deviam ir dormir, não é?<br>
         </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed fermentum nibh. Nullam rutrum massa odio, ac iaculis felis ultricies vitae. Nam ac erat orci. Sed pulvinar mollis nisl, et tempor tortor maximus non. Aliquam ac leo vulputate, euismod ex quis, euismod ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus, leo eu tempus finibus, augue erat tempor elit, ac rutrum risus tellus non diam. Proin fringilla turpis vel lobortis consectetur. Morbi vitae massa vel velit euismod dignissim placerat in nulla. Aenean sollicitudin orci non mi tincidunt, quis sagittis nunc aliquam. Ut enim elit, congue nec feugiat nec, vehicula ut felis. Integer pharetra molestie metus, eu finibus elit gravida eu. Nunc ultricies placerat dolor, vel pulvinar purus efficitur eget. Quisque ut pellentesque sem. Proin et scelerisque dui. Proin diam mi, rhoncus id vehicula eu, aliquam nec felis.
-        </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed fermentum nibh. Nullam rutrum massa odio, ac iaculis felis ultricies vitae. Nam ac erat orci. Sed pulvinar mollis nisl, et tempor tortor maximus non. Aliquam ac leo vulputate, euismod ex quis, euismod ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus, leo eu tempus finibus, augue erat tempor elit, ac rutrum risus tellus non diam. Proin fringilla turpis vel lobortis consectetur. Morbi vitae massa vel velit euismod dignissim placerat in nulla. Aenean sollicitudin orci non mi tincidunt, quis sagittis nunc aliquam. Ut enim elit, congue nec feugiat nec, vehicula ut felis. Integer pharetra molestie metus, eu finibus elit gravida eu. Nunc ultricies placerat dolor, vel pulvinar purus efficitur eget. Quisque ut pellentesque sem. Proin et scelerisque dui. Proin diam mi, rhoncus id vehicula eu, aliquam nec felis.
-        </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed fermentum nibh. Nullam rutrum massa odio, ac iaculis felis ultricies vitae. Nam ac erat orci. Sed pulvinar mollis nisl, et tempor tortor maximus non. Aliquam ac leo vulputate, euismod ex quis, euismod ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus, leo eu tempus finibus, augue erat tempor elit, ac rutrum risus tellus non diam. Proin fringilla turpis vel lobortis consectetur. Morbi vitae massa vel velit euismod dignissim placerat in nulla. Aenean sollicitudin orci non mi tincidunt, quis sagittis nunc aliquam. Ut enim elit, congue nec feugiat nec, vehicula ut felis. Integer pharetra molestie metus, eu finibus elit gravida eu. Nunc ultricies placerat dolor, vel pulvinar purus efficitur eget. Quisque ut pellentesque sem. Proin et scelerisque dui. Proin diam mi, rhoncus id vehicula eu, aliquam nec felis.
-        </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed fermentum nibh. Nullam rutrum massa odio, ac iaculis felis ultricies vitae. Nam ac erat orci. Sed pulvinar mollis nisl, et tempor tortor maximus non. Aliquam ac leo vulputate, euismod ex quis, euismod ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus, leo eu tempus finibus, augue erat tempor elit, ac rutrum risus tellus non diam. Proin fringilla turpis vel lobortis consectetur. Morbi vitae massa vel velit euismod dignissim placerat in nulla. Aenean sollicitudin orci non mi tincidunt, quis sagittis nunc aliquam. Ut enim elit, congue nec feugiat nec, vehicula ut felis. Integer pharetra molestie metus, eu finibus elit gravida eu. Nunc ultricies placerat dolor, vel pulvinar purus efficitur eget. Quisque ut pellentesque sem. Proin et scelerisque dui. Proin diam mi, rhoncus id vehicula eu, aliquam nec felis.
-        </p>
+<p>A mãe dos garotos interrompe a resposta de Dona Ana, a fim de que eles não escutem nada assustador e, com isso, passem a madrugada com medo. Como o mais velho tinha dez anos, era bem provável que ficasse colocando medo no mais novo.</p>
+<p>— Ah, não. A gente quer ouvir a história que a vovó Ana vai contar. — Eles contra-argumentam, insatisfeitos com a fala da mãe.<br>
+— Pode deixar eles aí, Penha. Não vai assustar. <br>
+— Continue mãe. — Carmen pediu.<br>
+— Er… dizia ele pra cumade Betinha, porque foi ela quem me contou isso, que ele tinha sonhado com uma pessoa que falou bem baixinho no pé do ouvido dele pra ele ir até o pé de braúna lá da estrada, as quatro horas da manhã, sozinho, que lá se ele cavasse muito encontraria uma butija.<br>
+— Ele foi?<br>
+— Se num foi… tu acha que ele não iria? O pobre vivia numa casa de taipa que se desse um vento avoava tudo. Tinha nem onde cair morto.<br>
+— Também não precisa disgraçar, né mãe. <br>
+— Pare de falar palavra feia menina, teus sobrinhos estão aqui.<br>
+— Tá bom, continue, porque se continuar só dando revem vai esquecer do resto.<br>
+— Só é parar de falar pelos cotovelos, vocêis, parece que tomou água de chocalho.<br>
+— Mãe! — a mãe dos garotos exclamou em um pedido implícito para que Dona Ana parasse de reclamar e continuasse a história.<br>
+— Ele queria muito o dinheiro que nem conseguiu dormir mais. Quando bateu as quatro da manhã, já estava quase no lugar que a voz do sonho tinha falado. Ele atravessou a estrada de terra e chegou do outro lado. Antes de começar a cavar, olhou pros lado, mas não aviu um pé de gente. Deu graças a Deus que não tinha ninguém, porque se alguém chegasse ali, o encantamento acabaria.<br>
+— Encantamento? — Nicolas sussurrou fascinado e sem entender como era possível existir encantamentos na vida real.<br>
+— Dizem lá na estrada de cima que butija com ouro é encantado. — A idosa gesticulou para onde a estrada ficava. — Aí ele começou a cavar. No começo nada demais tinha acontecido, mas ele começou a ouvir vozes atentando e vultos passavam triscando por detrás dele. Mas ele tentava não olhar, porque se ficasse distraído, a butija-se-ia embora. E cavou, cavou, cavou e nada. Já tava ficando cansado e o sol já começava a apontar. <br>
+— Eu já teria desistido. — Carmen comenta, cortando o pensamento de sua mãe mais uma vez. Ana apenas lançou uma olhadela de irritação por ter sido interrompida e Carmen engoliu em seco. — Desculpa mãe, termine.<br>
+— Se falar mais um piu, deixo de contar. — Condiciona, fazendo suas filhas concordarem meio medrosas.</p>
+<p>Quanto aos seus netos, eles ainda estavam imóveis, suas mentes trabalhando e imaginando os bichos que assombravam o Zé das Cabras.</p>
+<p>— Onde eu estava mesmo?<br>
+— A senhora tava na parte que ele estava cansado de cavar, vó. — Nivaldo relembrou.<br>
+— Foi mesmo, obrigado meu fi. — agradeceu alisando a cabeça do garoto. — Mesmo cansado, Zé continuou cavando até que viu a ponta de uma panela. Estava mais perto que longe. As vozes atentavam com mais força, o que fez ele começar a rezar para Deus pai, sem deixar de cavar. <br>
+"Ficou assim até que ouviu a voz dum conhecido: - Zé, o que você está fazendo acocorado aí? Era seu Bentinho que estava passando pela estrada e viu ele no pé da braúna. Como não era dele ficar ali, foi ver o que tava fazendo. Seu Zé das Cabras tentou afastar Bentinho de lá, mas não tinha quem fizesse ele arredar o pé. Então revelou que tinha sonhado com uma coisa e queria ver se era verdade. Pelo o que sei, se alguém souber e não colocar olho grande, a butija não vai embora. Seu Zé tentou a sorte e Bentinho se ajoelhou para ajudar. <br>
+"Com quase toda a butija descoberta, ela começou a voltar para terra. Seu Zé se desesperou. Bentinho tinha colocado olho grande. Ele segurou na ponta da panela. Se ela iria levar o ouro, iria levar ele também. A tampa se despregou e viu o dourado alumiar enquanto desaparecia terra adentro. Ficou só com a tampa de barro."<br>
+— Nossa vó, tô todo arrepiado. — Nicolas disse, mostrando seu braço com os pêlos para cima.<br>
+— Eu disse que vocês deveriam ter ido dormir. — Penha reclamou, cruzando os braços.<p>
+        
+<p>E assim, eles continuaram até alta madrugada, desvendando as histórias que estavam guardadas dentro do quengo de Dona Ana.</p>
+
+<p>Sumário:</p>
+<p>Noite de lua fina - Noite de lua cheia<br>
+Pé do ouvido - Expressão usada para se referir àquilo que é dito ou acontece muito próximo à orelha<br>
+Revem - Reclamação<br>
+Falar pelos cotovelos - Falar demais, tagarelar<br>
+Quengo - lembrança, mente</p>
     </div>
 
     <!-- SESSÃO DE BOTÕES -->
