--- a/histo.html
+++ b/histo.html
@@ -80,8 +80,8 @@ Quengo - lembrança, mente</p>
     <footer>
         <p>Siga-nos nas redes sociais!</p>
         <div class="social">
-            <a href="https://www.instagram.com/karolyne_1511/"><img src="/imagens/Instagram_logo.png"></a>
-            <a href="https://www.facebook.com/julynefalcao"><img src="/imagens/face-removebg-preview (1).png"></a>
+            <a href="https://www.instagram.com/karolyne_1511/"><img src="Instagram_logo.png"></a>
+            <a href="https://www.facebook.com/julynefalcao"><img src="face-removebg-preview (1).png"></a>
         </div>
         <br><br>
         <p> © Todos os Direitos Reservados</p>
